# DraconicEngine

./: .gitmodules  CMakeLists.txt  README.md
Editor/: Editor.cs
Engine/cpp/: CMakeLists.txt  DraconicAPI.h
Engine/cpp/runtime/: CMakeLists.txt
Engine/cpp/runtime/core/io/: image_loader.cppm
Engine/cpp/runtime/core/math/: math.test.cpp  transform.cpp  transform.cppm  types_common.cppm  vector2.cppm  vector3.cppm  vector4.cppm
Engine/cpp/runtime/rendering/renderer/: renderer.cpp
Samples/cpp/: CMakeLists.txt  rendering.cpp
cmake/: Modules.cmake  Shaders.cmake
engine/native/: CMakeLists.txt
engine/native/core/: CMakeLists.txt
engine/native/core/memory/: bumpAllocator.cppm  fixedAllocator.cppm  pageAllocator.cppm
engine/native/main/: main.cpp
engine/native/rendering/rhi/: rhi.cppm  rhi_bgfx.cpp
